tests/c_headers/sys_clock.h

typedef int64_t k_ticks_t;
typedef uint32_t k_ticks_t;