src/nephyr/zephyr/kernel/zk_time.nim


## *
##  @brief Synchronize thread to timer expiration.
##
##  This routine blocks the calling thread until the timer's status is non-zero
##  (indicating that it has expired at least once since it was last examined)
##  or the timer is stopped. If the timer status is already non-zero,
##  or the timer is already stopped, the caller continues without waiting.
##
##  Calling this routine resets the timer's status to zero.
##
##  This routine must not be used by interrupt handlers, since they are not
##  allowed to block.
##
##  @param timer     Address of timer.
##
##  @return Timer status.
##
proc k_timer_status_sync*(timer: ptr k_timer): uint32 {.zsyscall,
    importc: "k_timer_status_sync", header: "kernel.h".}
when CONFIG_SYS_CLOCK_EXISTS:
  ## *
  ##  @brief Get next expiration time of a timer, in system ticks
  ##
  ##  This routine returns the future system uptime reached at the next
  ##  time of expiration of the timer, in units of system ticks.  If the
  ##  timer is not running, current system time is returned.
  ##
  ##  @param timer The timer object
  ##  @return Uptime of expiration, in ticks
  ##
  proc k_timer_expires_ticks*(timer: ptr k_timer): k_ticks_t {.zsyscall,
      importc: "k_timer_expires_ticks", header: "kernel.h".}

  ## *
  ##  @brief Get time remaining before a timer next expires, in system ticks
  ##
  ##  This routine computes the time remaining before a running timer
  ##  next expires, in units of system ticks.  If the timer is not
  ##  running, it returns zero.
  ##
  proc k_timer_remaining_ticks*(timer: ptr k_timer): k_ticks_t {.zsyscall,
      importc: "k_timer_remaining_ticks", header: "kernel.h".}

  ## *
  ##  @brief Get time remaining before a timer next expires.
  ##
  ##  This routine computes the (approximate) time remaining before a running
  ##  timer next expires. If the timer is not running, it returns zero.
  ##
  ##  @param timer     Address of timer.
  ##
  ##  @return Remaining time (in milliseconds).
  ##
  proc k_timer_remaining_get*(timer: ptr k_timer): uint32 {.
      importc: "k_timer_remaining_ticks", header: "kernel.h".}

## *
##  @brief Associate user-specific data with a timer.
##
##  This routine records the @a user_data with the @a timer, to be retrieved
##  later.
##
##  It can be used e.g. in a timer handler shared across multiple subsystems to
##  retrieve data specific to the subsystem this timer is associated with.
##
##  @param timer     Address of timer.
##  @param user_data User data to associate with the timer.
##
##  @return N/A
##
proc k_timer_user_data_set*(timer: ptr k_timer; user_data: pointer) {.zsyscall,
    importc: "k_timer_user_data_set", header: "kernel.h".}




## *
##  @internal
##
proc z_impl_k_timer_user_data_set*(timer: ptr k_timer; user_data: pointer) {.
    importc: "$1", header: "kernel.h".}

## *
##  @brief Retrieve the user-specific data from a timer.
##
##  @param timer     Address of timer.
##
##  @return The user data.
##
proc k_timer_user_data_get*(timer: ptr k_timer): pointer {.zsyscall,
    importc: "k_timer_user_data_get", header: "kernel.h".}

## * @}
## *
##  @addtogroup clock_apis
##  @ingroup kernel_apis
##  @{
##
## *
##  @brief Get system uptime, in system ticks.
##
##  This routine returns the elapsed time since the system booted, in
##  ticks (c.f. @kconfig{CONFIG_SYS_CLOCK_TICKS_PER_SEC}), which is the
##  fundamental unit of resolution of kernel timekeeping.
##
##  @return Current uptime in ticks.
##
proc k_uptime_ticks*(): int64 {.zsyscall, importc: "k_uptime_ticks",
                                header: "kernel.h".}




## *
##  @brief Get system uptime.
##
##  This routine returns the elapsed time since the system booted,
##  in milliseconds.
##
##  @note
##     While this function returns time in milliseconds, it does
##     not mean it has millisecond resolution. The actual resolution depends on
##     @kconfig{CONFIG_SYS_CLOCK_TICKS_PER_SEC} config option.
##
##  @return Current uptime in milliseconds.
##
proc k_uptime_get*(): int64 {.
    importc: "k_uptime_get", header: "kernel.h".}

## *
##  @brief Get system uptime (32-bit version).
##
##  This routine returns the lower 32 bits of the system uptime in
##  milliseconds.
##
##  Because correct conversion requires full precision of the system
##  clock there is no benefit to using this over k_uptime_get() unless
##  you know the application will never run long enough for the system
##  clock to approach 2^32 ticks.  Calls to this function may involve
##  interrupt blocking and 64-bit math.
##
##  @note
##     While this function returns time in milliseconds, it does
##     not mean it has millisecond resolution. The actual resolution depends on
##     @kconfig{CONFIG_SYS_CLOCK_TICKS_PER_SEC} config option
##
##  @return The low 32 bits of the current uptime, in milliseconds.
##
proc k_uptime_get_32*(): uint32 {.
    importc: "k_uptime_get_32", header: "kernel.h".}

## *
##  @brief Get elapsed time.
##
##  This routine computes the elapsed time between the current system uptime
##  and an earlier reference time, in milliseconds.
##
##  @param reftime Pointer to a reference time, which is updated to the current
##                 uptime upon return.
##
##  @return Elapsed time.
##
proc k_uptime_delta*(reftime: ptr int64): int64 {.
    importc: "$1", header: "kernel.h".}

## *
##  @brief Read the hardware clock.
##
##  This routine returns the current time, as measured by the system's hardware
##  clock.
##
##  @return Current hardware clock up-counter (in cycles).
##
proc k_cycle_get_32*(): uint32 {.
    importc: "k_cycle_get_32", header: "kernel.h".}

